--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
+    "fetch-mock": "^5.12.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
@@ -50,6 +51,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
